--- a/components/header/index.module.scss
+++ b/components/header/index.module.scss
@@ -6,12 +6,12 @@
 
 .container {
 	height: 68px;
-	padding: 20px 20px 0 20px;
+	padding: 20px 20px 0;
 	margin: 0 auto;
 
 	@include breakpoint-md {
 		height: 74px;
-		padding: 26px 26px 0 26px;
+		padding: 26px 26px 0;
 	}
 }
 
@@ -56,7 +56,7 @@
 	}
 }
 
-:global(.dark-mode) .item {
+:global(.dark) .item {
 	background: $darker-black;
 	box-shadow: 0 0 10px rgba($darker-black, 0.5);
 
