chore: update linter and CI workflows

--- a/components/checkbox/index.module.scss
+++ b/components/checkbox/index.module.scss
@@ -11,8 +11,7 @@
 	cursor: pointer;
 	visibility: hidden;
 	outline: none;
-	-webkit-appearance: none;
-	-moz-appearance: none;
+	appearance: none;
 	-webkit-tap-highlight-color: transparent;
 }
 
