feat: upgrade react-use-gesture to @use-gesture/react

--- a/components/favycon-info/index.module.scss
+++ b/components/favycon-info/index.module.scss
@@ -163,6 +163,7 @@
 	max-width: 572px;
 	padding: 0 16px;
 	margin: 0 auto;
+	touch-action: none;
 	background: $white;
 
 	@include breakpoint-md {
