chore(deps): upgrade dependencies

--- a/components/typography/index.module.scss
+++ b/components/typography/index.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .root {
-	font-family: Manrope, Arial, Helvetica Neue, Helvetica, sans-serif;
+	font-family: 'Manrope', Arial, Helvetica Neue, Helvetica, sans-serif;
 }
 
 .h1 {
